Fix research name alignment for mobile

--- a/_scss/partials/_other-projects.scss
+++ b/_scss/partials/_other-projects.scss
@@ -2,6 +2,7 @@
   .project {
     max-width: 600px;
     margin-bottom: 30px;
+    
     @include tablet {
       width: 100%;
       display: block;
@@ -9,6 +10,11 @@
     }
     &__name {
       margin-bottom: 0px;
+      display: flex;
+      justify-content: space-between;
+      @include mobile {
+        display: block;
+      }
     }
     p {
       font-size: 0.9rem;
